Adding in more complexity to mileage calculation

--- a/synthetic_data_creation/Data_Creation.ipynb
+++ b/synthetic_data_creation/Data_Creation.ipynb
@@ -31,16 +31,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "2"
+              "6"
             ]
           },
-          "execution_count": 2,
+          "execution_count": 8,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -52,16 +52,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "[<data_generator.housing_property.housing_property at 0x7f9ad15e56f0>]"
+              "[<data_generator.housing_property.housing_property at 0x7fd600983f40>,\n",
+              " <data_generator.housing_property.housing_property at 0x7fd600982770>]"
             ]
           },
-          "execution_count": 3,
+          "execution_count": 9,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -72,39 +73,87 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "{(<data_generator.head_of_house.head_of_house at 0x7f9ad15e57b0>,\n",
-              "  <data_generator.vehicle.vehicle at 0x7f9ad15e7bb0>,\n",
-              "  'city'): 1732.5,\n",
-              " (<data_generator.head_of_house.head_of_house at 0x7f9ad15e57b0>,\n",
-              "  <data_generator.vehicle.vehicle at 0x7f9ad15e7bb0>,\n",
-              "  'highway'): 2227.5,\n",
-              " (<data_generator.head_of_house.head_of_house at 0x7f9ad15e57b0>,\n",
-              "  <data_generator.vehicle.vehicle at 0x7f9ad15e5780>,\n",
-              "  'city'): 1732.5,\n",
-              " (<data_generator.head_of_house.head_of_house at 0x7f9ad15e57b0>,\n",
-              "  <data_generator.vehicle.vehicle at 0x7f9ad15e5780>,\n",
-              "  'highway'): 2227.5,\n",
-              " (<data_generator.spouse.spouse at 0x7f9ad15e5690>,\n",
-              "  <data_generator.vehicle.vehicle at 0x7f9ad15e7bb0>,\n",
-              "  'city'): 1732.5,\n",
-              " (<data_generator.spouse.spouse at 0x7f9ad15e5690>,\n",
-              "  <data_generator.vehicle.vehicle at 0x7f9ad15e7bb0>,\n",
-              "  'highway'): 2227.5,\n",
-              " (<data_generator.spouse.spouse at 0x7f9ad15e5690>,\n",
-              "  <data_generator.vehicle.vehicle at 0x7f9ad15e5780>,\n",
-              "  'city'): 1732.5,\n",
-              " (<data_generator.spouse.spouse at 0x7f9ad15e5690>,\n",
-              "  <data_generator.vehicle.vehicle at 0x7f9ad15e5780>,\n",
-              "  'highway'): 2227.5}"
+              "{(<data_generator.head_of_house.head_of_house at 0x7fd6009828c0>,\n",
+              "  <data_generator.vehicle.vehicle at 0x7fd600982b00>,\n",
+              "  'city'): 1237.5,\n",
+              " (<data_generator.head_of_house.head_of_house at 0x7fd6009828c0>,\n",
+              "  <data_generator.vehicle.vehicle at 0x7fd600982b00>,\n",
+              "  'highway'): 3645.0,\n",
+              " (<data_generator.head_of_house.head_of_house at 0x7fd6009828c0>,\n",
+              "  <data_generator.vehicle.vehicle at 0x7fd600982680>,\n",
+              "  'city'): 1237.5,\n",
+              " (<data_generator.head_of_house.head_of_house at 0x7fd6009828c0>,\n",
+              "  <data_generator.vehicle.vehicle at 0x7fd600982680>,\n",
+              "  'highway'): 3645.0,\n",
+              " (<data_generator.spouse.spouse at 0x7fd600982590>,\n",
+              "  <data_generator.vehicle.vehicle at 0x7fd600982b00>,\n",
+              "  'city'): 1430.0000000000002,\n",
+              " (<data_generator.spouse.spouse at 0x7fd600982590>,\n",
+              "  <data_generator.vehicle.vehicle at 0x7fd600982b00>,\n",
+              "  'highway'): 4212.0,\n",
+              " (<data_generator.spouse.spouse at 0x7fd600982590>,\n",
+              "  <data_generator.vehicle.vehicle at 0x7fd600982680>,\n",
+              "  'city'): 1430.0000000000002,\n",
+              " (<data_generator.spouse.spouse at 0x7fd600982590>,\n",
+              "  <data_generator.vehicle.vehicle at 0x7fd600982680>,\n",
+              "  'highway'): 4212.0,\n",
+              " (<data_generator.child.child at 0x7fd600982b90>,\n",
+              "  <data_generator.vehicle.vehicle at 0x7fd600982b00>,\n",
+              "  'city'): 840.9499999999999,\n",
+              " (<data_generator.child.child at 0x7fd600982b90>,\n",
+              "  <data_generator.vehicle.vehicle at 0x7fd600982b00>,\n",
+              "  'highway'): 2476.98,\n",
+              " (<data_generator.child.child at 0x7fd600982b90>,\n",
+              "  <data_generator.vehicle.vehicle at 0x7fd600982680>,\n",
+              "  'city'): 840.9499999999999,\n",
+              " (<data_generator.child.child at 0x7fd600982b90>,\n",
+              "  <data_generator.vehicle.vehicle at 0x7fd600982680>,\n",
+              "  'highway'): 2476.98,\n",
+              " (<data_generator.child.child at 0x7fd600982ce0>,\n",
+              "  <data_generator.vehicle.vehicle at 0x7fd600982b00>,\n",
+              "  'city'): 954.1399999999999,\n",
+              " (<data_generator.child.child at 0x7fd600982ce0>,\n",
+              "  <data_generator.vehicle.vehicle at 0x7fd600982b00>,\n",
+              "  'highway'): 2810.3759999999997,\n",
+              " (<data_generator.child.child at 0x7fd600982ce0>,\n",
+              "  <data_generator.vehicle.vehicle at 0x7fd600982680>,\n",
+              "  'city'): 954.1399999999999,\n",
+              " (<data_generator.child.child at 0x7fd600982ce0>,\n",
+              "  <data_generator.vehicle.vehicle at 0x7fd600982680>,\n",
+              "  'highway'): 2810.3759999999997,\n",
+              " (<data_generator.child.child at 0x7fd6009828f0>,\n",
+              "  <data_generator.vehicle.vehicle at 0x7fd600982b00>,\n",
+              "  'city'): 954.1399999999999,\n",
+              " (<data_generator.child.child at 0x7fd6009828f0>,\n",
+              "  <data_generator.vehicle.vehicle at 0x7fd600982b00>,\n",
+              "  'highway'): 2810.3759999999997,\n",
+              " (<data_generator.child.child at 0x7fd6009828f0>,\n",
+              "  <data_generator.vehicle.vehicle at 0x7fd600982680>,\n",
+              "  'city'): 954.1399999999999,\n",
+              " (<data_generator.child.child at 0x7fd6009828f0>,\n",
+              "  <data_generator.vehicle.vehicle at 0x7fd600982680>,\n",
+              "  'highway'): 2810.3759999999997,\n",
+              " (<data_generator.child.child at 0x7fd600982d70>,\n",
+              "  <data_generator.vehicle.vehicle at 0x7fd600982b00>,\n",
+              "  'city'): 727.76,\n",
+              " (<data_generator.child.child at 0x7fd600982d70>,\n",
+              "  <data_generator.vehicle.vehicle at 0x7fd600982b00>,\n",
+              "  'highway'): 2143.584,\n",
+              " (<data_generator.child.child at 0x7fd600982d70>,\n",
+              "  <data_generator.vehicle.vehicle at 0x7fd600982680>,\n",
+              "  'city'): 727.76,\n",
+              " (<data_generator.child.child at 0x7fd600982d70>,\n",
+              "  <data_generator.vehicle.vehicle at 0x7fd600982680>,\n",
+              "  'highway'): 2143.584}"
             ]
           },
-          "execution_count": 4,
+          "execution_count": 10,
           "metadata": {},
           "output_type": "execute_result"
         }
