Initial process for allocating drivers to vehicles

--- a/synthetic_data_creation/Data_Creation.ipynb
+++ b/synthetic_data_creation/Data_Creation.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 1,
       "metadata": {
         "id": "V5IWRYrBzQC9"
       },
@@ -31,16 +31,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "2"
+              "7"
             ]
           },
-          "execution_count": 12,
+          "execution_count": 5,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -52,114 +52,113 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "[<data_generator.housing_property.housing_property at 0x7fd600983f40>,\n",
-              " <data_generator.housing_property.housing_property at 0x7fd600982770>]"
+              "{(<data_generator.head_of_house.head_of_house at 0x7fabb1896e00>,\n",
+              "  <data_generator.vehicle.vehicle at 0x7fabb18973a0>): 0.15,\n",
+              " (<data_generator.head_of_house.head_of_house at 0x7fabb1896e00>,\n",
+              "  <data_generator.vehicle.vehicle at 0x7fabb1896fb0>): 0.85,\n",
+              " (<data_generator.spouse.spouse at 0x7fabb1896ec0>,\n",
+              "  <data_generator.vehicle.vehicle at 0x7fabb18973a0>): 0.85,\n",
+              " (<data_generator.spouse.spouse at 0x7fabb1896ec0>,\n",
+              "  <data_generator.vehicle.vehicle at 0x7fabb1896fb0>): 0.15,\n",
+              " (<data_generator.child.child at 0x7fabb1896a40>,\n",
+              "  <data_generator.vehicle.vehicle at 0x7fabb18973a0>): 0.7966895796997366,\n",
+              " (<data_generator.child.child at 0x7fabb1896a40>,\n",
+              "  <data_generator.vehicle.vehicle at 0x7fabb1896fb0>): 0.20331042030026342,\n",
+              " (<data_generator.child.child at 0x7fabb1897580>,\n",
+              "  <data_generator.vehicle.vehicle at 0x7fabb18973a0>): 0.0854474193680604,\n",
+              " (<data_generator.child.child at 0x7fabb1897580>,\n",
+              "  <data_generator.vehicle.vehicle at 0x7fabb1896fb0>): 0.9145525806319397,\n",
+              " (<data_generator.child.child at 0x7fabb1897520>,\n",
+              "  <data_generator.vehicle.vehicle at 0x7fabb18973a0>): 0.8494602853696162,\n",
+              " (<data_generator.child.child at 0x7fabb1897520>,\n",
+              "  <data_generator.vehicle.vehicle at 0x7fabb1896fb0>): 0.15053971463038385,\n",
+              " (<data_generator.child.child at 0x7fabb18973d0>,\n",
+              "  <data_generator.vehicle.vehicle at 0x7fabb18973a0>): 0.8494602853696162,\n",
+              " (<data_generator.child.child at 0x7fabb18973d0>,\n",
+              "  <data_generator.vehicle.vehicle at 0x7fabb1896fb0>): 0.15053971463038385,\n",
+              " (<data_generator.child.child at 0x7fabb18975e0>,\n",
+              "  <data_generator.vehicle.vehicle at 0x7fabb18973a0>): 0.0854474193680604,\n",
+              " (<data_generator.child.child at 0x7fabb18975e0>,\n",
+              "  <data_generator.vehicle.vehicle at 0x7fabb1896fb0>): 0.9145525806319397}"
             ]
           },
-          "execution_count": 9,
+          "execution_count": 6,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
-        "my_house.properties"
+        "my_house.determine_veh_assignements()"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "{(<data_generator.head_of_house.head_of_house at 0x7fd6009828c0>,\n",
-              "  <data_generator.vehicle.vehicle at 0x7fd600982b00>,\n",
-              "  'city'): 1237.5,\n",
-              " (<data_generator.head_of_house.head_of_house at 0x7fd6009828c0>,\n",
-              "  <data_generator.vehicle.vehicle at 0x7fd600982b00>,\n",
-              "  'highway'): 3645.0,\n",
-              " (<data_generator.head_of_house.head_of_house at 0x7fd6009828c0>,\n",
-              "  <data_generator.vehicle.vehicle at 0x7fd600982680>,\n",
-              "  'city'): 1237.5,\n",
-              " (<data_generator.head_of_house.head_of_house at 0x7fd6009828c0>,\n",
-              "  <data_generator.vehicle.vehicle at 0x7fd600982680>,\n",
-              "  'highway'): 3645.0,\n",
-              " (<data_generator.spouse.spouse at 0x7fd600982590>,\n",
-              "  <data_generator.vehicle.vehicle at 0x7fd600982b00>,\n",
+              "{(<data_generator.head_of_house.head_of_house at 0x7f3d5e897a00>,\n",
+              "  <data_generator.vehicle.vehicle at 0x7f3d5e8968c0>,\n",
+              "  'city'): 756.2500000000001,\n",
+              " (<data_generator.head_of_house.head_of_house at 0x7f3d5e897a00>,\n",
+              "  <data_generator.vehicle.vehicle at 0x7f3d5e8968c0>,\n",
+              "  'highway'): 2227.5,\n",
+              " (<data_generator.head_of_house.head_of_house at 0x7f3d5e897a00>,\n",
+              "  <data_generator.vehicle.vehicle at 0x7f3d5e897bb0>,\n",
+              "  'city'): 756.2500000000001,\n",
+              " (<data_generator.head_of_house.head_of_house at 0x7f3d5e897a00>,\n",
+              "  <data_generator.vehicle.vehicle at 0x7f3d5e897bb0>,\n",
+              "  'highway'): 2227.5,\n",
+              " (<data_generator.spouse.spouse at 0x7f3d5e8969b0>,\n",
+              "  <data_generator.vehicle.vehicle at 0x7f3d5e8968c0>,\n",
               "  'city'): 1430.0000000000002,\n",
-              " (<data_generator.spouse.spouse at 0x7fd600982590>,\n",
-              "  <data_generator.vehicle.vehicle at 0x7fd600982b00>,\n",
+              " (<data_generator.spouse.spouse at 0x7f3d5e8969b0>,\n",
+              "  <data_generator.vehicle.vehicle at 0x7f3d5e8968c0>,\n",
               "  'highway'): 4212.0,\n",
-              " (<data_generator.spouse.spouse at 0x7fd600982590>,\n",
-              "  <data_generator.vehicle.vehicle at 0x7fd600982680>,\n",
+              " (<data_generator.spouse.spouse at 0x7f3d5e8969b0>,\n",
+              "  <data_generator.vehicle.vehicle at 0x7f3d5e897bb0>,\n",
               "  'city'): 1430.0000000000002,\n",
-              " (<data_generator.spouse.spouse at 0x7fd600982590>,\n",
-              "  <data_generator.vehicle.vehicle at 0x7fd600982680>,\n",
-              "  'highway'): 4212.0,\n",
-              " (<data_generator.child.child at 0x7fd600982b90>,\n",
-              "  <data_generator.vehicle.vehicle at 0x7fd600982b00>,\n",
-              "  'city'): 840.9499999999999,\n",
-              " (<data_generator.child.child at 0x7fd600982b90>,\n",
-              "  <data_generator.vehicle.vehicle at 0x7fd600982b00>,\n",
-              "  'highway'): 2476.98,\n",
-              " (<data_generator.child.child at 0x7fd600982b90>,\n",
-              "  <data_generator.vehicle.vehicle at 0x7fd600982680>,\n",
-              "  'city'): 840.9499999999999,\n",
-              " (<data_generator.child.child at 0x7fd600982b90>,\n",
-              "  <data_generator.vehicle.vehicle at 0x7fd600982680>,\n",
-              "  'highway'): 2476.98,\n",
-              " (<data_generator.child.child at 0x7fd600982ce0>,\n",
-              "  <data_generator.vehicle.vehicle at 0x7fd600982b00>,\n",
-              "  'city'): 954.1399999999999,\n",
-              " (<data_generator.child.child at 0x7fd600982ce0>,\n",
-              "  <data_generator.vehicle.vehicle at 0x7fd600982b00>,\n",
-              "  'highway'): 2810.3759999999997,\n",
-              " (<data_generator.child.child at 0x7fd600982ce0>,\n",
-              "  <data_generator.vehicle.vehicle at 0x7fd600982680>,\n",
-              "  'city'): 954.1399999999999,\n",
-              " (<data_generator.child.child at 0x7fd600982ce0>,\n",
-              "  <data_generator.vehicle.vehicle at 0x7fd600982680>,\n",
-              "  'highway'): 2810.3759999999997,\n",
-              " (<data_generator.child.child at 0x7fd6009828f0>,\n",
-              "  <data_generator.vehicle.vehicle at 0x7fd600982b00>,\n",
-              "  'city'): 954.1399999999999,\n",
-              " (<data_generator.child.child at 0x7fd6009828f0>,\n",
-              "  <data_generator.vehicle.vehicle at 0x7fd600982b00>,\n",
-              "  'highway'): 2810.3759999999997,\n",
-              " (<data_generator.child.child at 0x7fd6009828f0>,\n",
-              "  <data_generator.vehicle.vehicle at 0x7fd600982680>,\n",
-              "  'city'): 954.1399999999999,\n",
-              " (<data_generator.child.child at 0x7fd6009828f0>,\n",
-              "  <data_generator.vehicle.vehicle at 0x7fd600982680>,\n",
-              "  'highway'): 2810.3759999999997,\n",
-              " (<data_generator.child.child at 0x7fd600982d70>,\n",
-              "  <data_generator.vehicle.vehicle at 0x7fd600982b00>,\n",
-              "  'city'): 727.76,\n",
-              " (<data_generator.child.child at 0x7fd600982d70>,\n",
-              "  <data_generator.vehicle.vehicle at 0x7fd600982b00>,\n",
-              "  'highway'): 2143.584,\n",
-              " (<data_generator.child.child at 0x7fd600982d70>,\n",
-              "  <data_generator.vehicle.vehicle at 0x7fd600982680>,\n",
-              "  'city'): 727.76,\n",
-              " (<data_generator.child.child at 0x7fd600982d70>,\n",
-              "  <data_generator.vehicle.vehicle at 0x7fd600982680>,\n",
-              "  'highway'): 2143.584}"
+              " (<data_generator.spouse.spouse at 0x7f3d5e8969b0>,\n",
+              "  <data_generator.vehicle.vehicle at 0x7f3d5e897bb0>,\n",
+              "  'highway'): 4212.0}"
             ]
           },
-          "execution_count": 10,
+          "execution_count": 3,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
         "my_house.determine_mileage()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 7,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "2"
+            ]
+          },
+          "execution_count": 7,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "pick_nth = lambda list_val, select: [list_val.index(i) for i in sorted(list_val, reverse=True)][:select][0]\n",
+        "pick_nth([1, 2, 3], 2)"
       ]
     },
     {
