--- a/synthetic_data_creation/Data_Creation.ipynb
+++ b/synthetic_data_creation/Data_Creation.ipynb
@@ -4714,6 +4714,98 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 16,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead tr th {\n",
+              "        text-align: left;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead tr:last-of-type th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr>\n",
+              "      <th></th>\n",
+              "      <th>vehicle_claim_cnt_all_0</th>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th></th>\n",
+              "      <th>mean</th>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>vehicle_type</th>\n",
+              "      <th></th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>pickup</th>\n",
+              "      <td>0.431718</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>sedan</th>\n",
+              "      <td>0.301932</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>sports car</th>\n",
+              "      <td>0.317416</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>suv</th>\n",
+              "      <td>0.352313</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>van</th>\n",
+              "      <td>0.471579</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "             vehicle_claim_cnt_all_0\n",
+              "                                mean\n",
+              "vehicle_type                        \n",
+              "pickup                      0.431718\n",
+              "sedan                       0.301932\n",
+              "sports car                  0.317416\n",
+              "suv                         0.352313\n",
+              "van                         0.471579"
+            ]
+          },
+          "execution_count": 16,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "var = 'vehicle_claim_cnt_all_0'\n",
+        "groupby_var = 'vehicle_type'\n",
+        "\n",
+        "df \\\n",
+        "    .groupby(groupby_var) \\\n",
+        "    [[var]] \\\n",
+        "    .agg(['mean'])"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
       "metadata": {},
       "outputs": [],
